adding the abstraction of tricksets
